[universal-media-shortcuts] fix skip dialog z-index issue

--- a/projects/universal-media-shortcuts/src/styles/skip-dlg.css
+++ b/projects/universal-media-shortcuts/src/styles/skip-dlg.css
@@ -24,6 +24,7 @@
     font-weight: initial;
     font-style: initial;
     color: var(--text-color);
+    z-index: 1000000;
 
     * {
         font-family: inherit;
